@@ -26,7 +26,7 @@ from tulip.log import log_debug
 
 from tulip.compat import (
     urllib2, cookielib, urlparse, URLopener, quote_plus, unquote, unicode, unescape, range, basestring, str,
-    urlsplit, urlencode, bytes, is_py3, is_py2
+    urlsplit, urlencode, bytes, is_py3, is_py2, addinfourl
 )
 
 
@@ -147,17 +147,27 @@ def request(
 
         if redirect is False:
 
-            class NoRedirection(urllib2.HTTPErrorProcessor):
+            class NoRedirectHandler(urllib2.HTTPRedirectHandler):
 
-                def http_response(self, request, response):
-                    return response
+                def http_error_302(self, reqst, fp, code, msg, head):
 
-            opener = urllib2.build_opener(NoRedirection)
+                    infourl = addinfourl(fp, head, reqst.get_full_url())
+                    infourl.status = code
+                    infourl.code = code
+
+                    return infourl
+
+                http_error_300 = http_error_302
+                http_error_301 = http_error_302
+                http_error_303 = http_error_302
+                http_error_307 = http_error_302
+
+            opener = urllib2.build_opener(NoRedirectHandler())
             urllib2.install_opener(opener)
 
             try:
                 del headers['Referer']
-            except BaseException:
+            except Exception:
                 pass
 
         req = urllib2.Request(url, data=post, headers=headers)
@@ -559,6 +569,19 @@ def _getDOMElements(item, name, attrs):
 
     # log_debug("Done: " + str(type(lst)))
     return lst
+
+
+def parse_headers(string):
+
+    """
+    Converts a multi-line response/request headers string into a dictionary
+    :param string: string of headers
+    :return: dictionary of response headers
+    """
+
+    headers = dict([line.partition(': ')[::2] for line in string.splitlines()])
+
+    return headers
 
 
 def stripTags(html):
