@@ -13,6 +13,8 @@
   > isPlayable parameter made available for disabling auto playable assignment based on isFolder
 - Added login support for client.request module
 - Improved ssl verification on client module
+- Improved redirection handler
+- Added parse_headers function which converts a response/request headers string into dictionary
 - Simplified random agent picking, addition of mobile agents function
 - Added ordereddict conditional into compat module
 - Added busy function to activate busydialog
